--- a/html/git.html
+++ b/html/git.html
@@ -12,6 +12,9 @@
     </header>
 
     <main>
+        <div class="main-content">
+            <p>Some content for git</p>
+        </div>
 
     </main>
 
